--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Тестоввое задание 1</title>
  </head>
  <body>
-    <img src="image.php"/>
+<!--     <img src="image.php"/> -->
  </body>
 </html>
